Rename marketplace module classes